Update core.css | Create core.js | Create custom sweetalerts | Update  layouts' navigation bar

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -2,19 +2,17 @@
     --white: #fff;
     --black: #000;
 
-    --btn-primary-color: #232446;
+    --btn-primary-color: #04062e;
 }
 
 /* BUTTONS */
 .btn-outline-primary {
     color: var(--btn-primary-color);
     border-color: var(--btn-primary-color);
-    font-weight: bold;
 }
 
 .btn-outline-primary:hover {
     background-color: var(--btn-primary-color) ;
     border-color: var(--btn-primary-color);
-    font-weight: bold;
 }
 /* /BUTTONS */
